force-app/main/default/objects/Blocking_Detail__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Blocking Details</relationshipLabel>
    <relationshipName>Blocking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>