force-app/main/default/objects/Blocking_Detail__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <label>Cheque Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>