force-app/main/default/objects/Blocking_Detail__c/fields/ClusterName__c.field-meta.xml
<CustomField>
    <fullName>ClusterName__c</fullName>
    <formula>Unit__r.Tower__r.Cluster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClusterName</label>
    <type>Text</type>
</CustomField>