force-app/main/default/objects/Blocking_Detail__c/fields/Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Email__c</fullName>
    <label>Preferred Email</label>
    <type>Email</type>
</CustomField>