force-app/main/default/objects/Blocking_Detail__c/fields/PersonMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone__c</fullName>
    <label>Preferred Mobile Phone</label>
    <type>Phone</type>
</CustomField>