force-app/main/default/objects/Blocking_Detail__c/fields/TowerName__c.field-meta.xml
<CustomField>
    <fullName>TowerName__c</fullName>
    <formula>Unit__r.Tower__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TowerName</label>
    <type>Text</type>
</CustomField>