force-app/main/default/objects/Blocking_Detail__c/validationRules/Prevent_Modification_Of_Unit_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Modification_Of_Unit_Details</fullName>
    <active>true</active>
    <description>Stop the users from modifying the unit details on existing blocking details record</description>
    <errorConditionFormula>AND(
PRIORVALUE(Unit__c) &lt;&gt; null,
ISCHANGED(Unit__c) 
)</errorConditionFormula>
    <errorMessage>Unit details can&apos;t be modified</errorMessage>
</ValidationRule>