force-app/main/default/objects/Blocking_Detail__c/validationRules/PreventDuplicateBlocking.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventDuplicateBlocking</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Unit__r.Unit_Status__c,&apos;Blocked&apos;), 
ISPICKVAL(Unit__r.Unit_Status__c,&apos;Booked&apos;), 
ISPICKVAL(Unit__r.Unit_Status__c,&apos;Sold&apos;), 
ISPICKVAL(Unit__r.Unit_Status__c,&apos;Reserved&apos;) 
), 
ISPICKVAL(Status__c, &apos;Blocked&apos;) 
)</errorConditionFormula>
    <errorMessage>You cannot block this unit. Only units in &apos;Available&apos; status can be blocked.</errorMessage>
</ValidationRule>