force-app/main/default/objects/Blocking_Detail__c/validationRules/Restricting_multiblocking_of_a_unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Restricting_multiblocking_of_a_unit</fullName>
    <active>true</active>
    <description>This unit is already blocked by someone. Please contact the admininstrator for more details.</description>
    <errorConditionFormula>AND (ISPICKVAL(Unit__r.Unit_Status__c,&apos;Blocked&apos;),ISPICKVAL( Status__c, &apos;Blocked&apos;))</errorConditionFormula>
    <errorMessage>Restricting to one blocking request per unit</errorMessage>
</ValidationRule>