force-app/main/default/objects/Blocking_Detail__c/validationRules/UnBlock_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>UnBlock_Unit</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Blocked&apos;), 
OR(ISPICKVAL(Opportunity__r.StageName , &apos;Booked&apos;), 
ISPICKVAL(Opportunity__r.StageName , &apos;Sold&apos;), 
ISPICKVAL(Opportunity__r.StageName , &apos;Cancelled&apos;), 
ISPICKVAL(Opportunity__r.StageName , &apos;Closed Lost&apos;)) 
)</errorConditionFormula>
    <errorMessage>Please Check Opportunity Stage It Must Not Be [Booked,Sold,Cancelled,Closed Lost].</errorMessage>
</ValidationRule>